# AgentES

./: .gitignore  README.md  agentes_design.html  pyproject.toml
agentes/: __init__.py  cli.py  db.py  ids.py  models.py  render.py  search.py  session.py  skill.py  storage.py  validate.py
examples/: context_generated_artifact.yaml  exp_generated_artifact.yaml  run_demo.sh
scripts/: agentes_entry.py  build_binary.py
skills/: global_experience_retrieval.md
skills/claude_code/agentes/: SKILL.md
skills/codex/agentes/: SKILL.md
tests/: test_cli_flow.py
